Bug 342059 - KMail 4.14.3: Option 'send later' breaks account settings
Summary: KMail 4.14.3: Option 'send later' breaks account settings
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.14.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-20 19:05 UTC by Axel Braun
Modified: 2015-06-08 09:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2014-12-20 19:05:48 UTC
Write an Email from an IMAP mail account, chose 'sign message', and the the option 'send later'. Specify a time in the future. At time the message is send:
- the message ist *not* signed
- the message is stored in the sendbox of the local folder. System setting was to store the send message in the send-Folder of the IMAP-Account

Reproducible: Always

Steps to Reproduce:
1. see above
2.
3.
Comment 1 Laurent Montel 2014-12-21 12:36:35 UTC
Ok I try to debug/fix it last week
Comment 2 Laurent Montel 2014-12-28 07:13:12 UTC
Ok I confirm it.
But don't understand why for the moment.
I continue to investigate.
Comment 3 Laurent Montel 2015-01-01 18:48:49 UTC
Git commit f12577d985e29a426354124707d42e8e0dda0d36 by Montel Laurent.
Committed on 01/01/2015 at 18:48.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 342059 - KMail 4.14.3: Option 'send later' breaks account settings

FIXED-IN: 14.12.1

M  +0    -1    agents/sendlateragent/sendlaterjob.cpp

http://commits.kde.org/kdepim/f12577d985e29a426354124707d42e8e0dda0d36