Fix Bug 342059 - KMail 4.14.3: Option 'send later' breaks account settings

FIXED-IN: 14.12.1
BUG: 342059